# cryptalytics

./: .gitignore  Makefile  README.md
infrastructure/: .gitignore
infrastructure/kubernetes/: .gitignore  airflow.yaml  fluent-bit.yaml  ingestion.yaml  kustomization.yaml  namespace.yaml
infrastructure/kubernetes/base/: airflow-rbac.yaml  airflow-values.yaml  fluent-bit.yaml  ingestion.yaml  kustomization.yaml  mongodb-values.yaml  namespace.yaml  tick-processor.yaml
infrastructure/kubernetes/overlays/local/: kafka.yaml  (+5 more)
orchestration/: Dockerfile  pyproject.toml  requirements.txt  symbol_onboarding.py
proto/: ingestion.proto
scripts/: generate-protos.sh
services/backfill/: .dockerignore  Dockerfile  pyproject.toml  settings.py
services/backfill/backfill/: download.py  main.py  plan.py  settings.py
services/ingestion/: .gitignore  Dockerfile  main.py  pyproject.toml  settings.py
services/ingestion/ingestion/: main.py  settings.py
services/ingestion/repository/: kafka.py
services/ingestion/service/: rest.py  websocket.py
services/spark-streaming/: Dockerfile  pyproject.toml
services/spark-streaming/scripts/: init_delta_table.py
services/spark-streaming/spark_streaming/: aggregator.py  main.py  settings.py
services/tick-processor/: Dockerfile  pyproject.toml
services/tick-processor/tick_processor/: aggregator.py  heartbeat.py  main.py  settings.py
shared/pb/: pyproject.toml
shared/pb/proto/: ingestion.proto
shared/pb/scripts/: generate-protos.sh
shared/pb/src/pb/: ingestion_pb2.py  ingestion_pb2_grpc.py
shared/pylib/: pyproject.toml
(+8 files in other folders)
